--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,5 +1,15 @@
 @import "tailwindcss";
 
+p{
+  font-size: 18px;
+  line-height: 30px;
+  font-weight: 400;
+}
+h1 {
+  font-size: 32px;
+  line-height: 40px;
+  font-weight: 500;
+}
 @keyframes marquee {
   0% {
     transform: translateX(100%);
@@ -9,7 +19,35 @@
   }
 }
 
+
+@keyframes spin-slow {
+  0% { transform: rotate(0deg); }
+  100% { transform: rotate(360deg); }
+}
+
+.animate-spin-slow {
+  animation: spin-slow 6s linear infinite; /* Adjust duration for speed */
+}
+
+
 .animate-marquee {
   display: flex;
   animation: marquee 20s linear infinite;
+}
+
+
+/* Tablet */
+@media (min-width: 768px) {
+  h1 {
+    font-size: 44px;
+    line-height: 56px;
+  }
+}
+
+/* Desktop */
+@media (min-width: 1200px) {
+  h1 {
+    font-size: 56px;
+    line-height: 72px;
+  }
 }
